<resources>
    <string name="facebook_app_id">653514792036575</string>
    <string name="fb_login_protocol_scheme">fb653514792036575</string>
    <string name="app_name">AlertMeU</string>
    <string name="title_activity_maps">Map</string>
    <string name="login">Log in</string>
    <string name="register">Registration</string>
    <string name="l_email">Enter your email address*</string>
    <string name="l_password">Enter Password</string>
    <string name="r_g_male">He</string>
    <string name="r_g_female">She</string>
    <string name="r_first_name">* First Name</string>
    <string name="r_last_name">* Last Name</string>
    <string name="r_mobile_no">* Mobile Number</string>
    <string name="r_email">Email Id</string>
    <string name="r_password">* Password</string>
    <string name="uploaddata">Upload Data</string>
    <string name="paypal">Paypal Payment</string>
    <string name="showdata">Show Data On Map</string>
    <string name="generateqrcode">Advertisement</string>
    <string name="scanqrcode">Scan QR Code</string>
    <string name="paypal_button">Pay with PayPal</string>
    <string name="title_activity_n">NActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AlertMeU</string>
    <string name="nav_header_subtitle">alertmeu@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_page">AlertMeU</string>
    <string name="loading">Loading...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="regTitle">Register and get started</string>
    <string name="regGuestUser">Log in as a Guest user</string>
    <string name="regMobileNo">Enter your Phone number here</string>
    <string name="regNext">Next</string>
    <string name="regDescOne">By signing up you accept our Terms of Services and Privacy Policy</string>
    <string name="regVryDesc">We sent a code to verify your phone number</string>
    <string name="regCode">Enter the code here</string>
    <string name="regCrePass">Create a password*</string>
    <string name="regEnterPass">Enter password here.*</string>
    <string name="regReEnterPass">Re-nter password here..*</string>
    <string name="regReEnterReferral">Referral Code</string>
    <string name="regReEnterPassDesc">Do Not share your password with anyone.</string>
    <string name="regReferralDesc">Please enter valid Referral Code</string>
    <string name="regAllReferralDesc">Another business or user was registered on this device using a referral code. Please use a different device to use referral code.</string>
    <string name="regReferralDescS">Referral code applied. Thank you!</string>
    <string name="regReWarning">This phone number already exists.</string>
    <string name="regReWarning1">This phone number not valid.</string>
    <string name="regEnterPassDec">The password must be minimum 6 characters long.\n You can use letters and alphabets and special characters !#$*</string>
    <string name="logDec1">Have a changed your phone number?</string>
    <string name="logSignInM">Log in with Email</string>
    <string name="logSignInMn">Log in with phone number</string>
    <string name="lognew">New to AlertMeU?</string>
    <string name="logreg">Register Free</string>
    <string name="logpass">Enter your password here</string>
    <string name="logfpass">Forgot your password?</string>
    <string name="reg_mobile_no">Enter your mobile phone number</string>
    <string name="setmyprec">My Shopping Preferences</string>
    <string name="setmyplac">My places</string>
    <string name="setmyhelp">Help</string>
    <string name="setshare">Share the app</string>
    <string name="setsharecon">Invite my contacts</string>
    <string name="applang">App Language</string>
    <string name="helpCen">Help Center</string>
    <string name="helpcmn">Change my number</string>
    <string name="helpcmp">Change my password</string>
    <string name="helpfaq">Questions and Answers</string>
    <string name="helpcus">Contact us</string>
    <string name="helptpp">Privacy Policy</string>
    <string name="helptcp">Terms and Conditions</string>
    <string name="helplo">Log out</string>
    <string name="helpCan">Cancel</string>
    <string name="helpv">version</string>
    <string name="helpb">Build</string>
    <string name="helts">Terms of Service</string>
    <string name="heltcmn">Change my phone number</string>
    <string name="heltcmp">Change my password</string>
    <string name="helDesc1">Use Change Number to move your account info and settings from your current phone number to a new phone number.
</string>
    <string name="helDesc2">To continue you need to enter your OLD and NEW phone numbers in next screen.</string>
    <string name="helDesc3">OLD PHONE NUMBER</string>
    <string name="helDesc6">NEW PHONE NUMBER</string>
    <string name="helOp">OLD PASSWORD</string>
    <string name="helNp">NEW PASSWORD</string>
    <string name="helDesc4">Enter your OLD Phone number here</string>
    <string name="helDesc5">Enter your NEW Phone number here </string>
    <string name="helOp4">Enter your OLD Password here</string>
    <string name="helNp5">Enter your NEW Password here </string>
    <string name="helNpr">REENTER PASSWORD</string>
    <string name="helNpr5">Re-enter your password here </string>
    <string name="contactdec">Please read frequently asked questions first. If your questions are still not answered describe the problem or issues, include screenshots, if available, and send it to us.
        \n\nThank you using the App.
        \n\nDescribe your problem here:</string>
    <string name="contactsend">Send</string>
    <string name="myloc">My current location</string>
    <string name="helpLog">You will be logged out of AlertMeU application. To access the application, please log in again.</string>
    <string name="myprep">My Preferred Places</string>
    <string name="regReMbc">Select your Shopping preference</string>
    <string name="regReSbc">Select your sub category</string>
    <string name="regReAS">Account Setup</string>
    <string name="advertTilte">Advertisement Details</string>
    <string name="editUserTitile">User Details</string>
    <string name="editUserUpdate">Update</string>
    <string name="faqD">Did not find answers to your questions?</string>
    <string name="qrD"> Show this QR code to the business to scan. If the ad has special deal or coupon, this QR code might get you the special deal</string>
    <string name="xsearch">Search...</string>
    <string name="xshp">Shopping Preference not specified.</string>
    <string name="xnadshp">No Ads at this time, please add categories to your shopping preference or check again after sometime.</string>
    <string name="xnshp">No shopping preference selected.</string>
    <string name="xnsho">\nPlease add screenshot or photo of the problem below.</string>
    <string name="xdesc">Description:</string>
    <string name="xlimi">Limitation:</string>
    <string name="xvali">Validity:</string>
    <string name="xbusin">Business:</string>
    <string name="xloc">Location</string>
    <string name="xlmv">Learn More</string>
    <string name="xsi">Log in</string>
    <string name="xwc">Welcome!</string>
    <string name="xemn">Enter Your Phone number</string>
    <string name="xwim">What is important to Me and U!</string>
    <string name="xasn">\n\nAlertMeU service is currently not available at your location. Please send a request so we can notify you once the service is available.\nThank you for your interest in AlertMeU.</string>
    <string name="xwin">\n\nThank you for submitting your request. We will notify you as soon as AlertMeU service is available at your location.</string>
    <string name="xem"> Enter Mobile Number</string>
    <string name="xemi">  Email Id</string>
    <string name="xsr">Send Request</string>
    <string name="xrt">Retry</string>
    <string name="xmfl">My Favourite Locations</string>
    <string name="xcfl">Create a favourite place</string>
    <string name="xep">Enter your password</string>
    <string name="xnu">Not you?</string>
    <string name="xrcp">If you have a referral code, please enter it below.</string>
    <string name="xappy">Apply</string>
    <string name="xqs">Quick Settings</string>
    <string name="xsd">Show me the ads.</string>
    <string name="xfd">for today</string>
    <string name="xft">for tomorrow</string>
    <string name="xfnw">for next one week</string>
    <string name="xfntw">for next two weeks</string>
    <string name="xhe">He</string>
    <string name="xshe">She</string>
    <string name="xaln">Alternate Mobile number</string>
    <string name="xad">Add</string>
    <string name="xadi">Edit</string>
    <string name="xalm">Alternate Email address</string>
    <string name="xas">Account Settings</string>
    <string name="xlike">Like</string>
    <string name="xcall">Call</string>
    <string name="xmail">Mail</string>
    <string name="xmap">Map</string>
    <string name="xshare">Share</string>
    <string name="xdislike">Dislike</string>
    <string name="xeadd">Email address</string>
    <string name="xeeadd">Enter Email address</string>
    <string name="xeotp">Enter OTP</string>
    <string name="xvryf">Verify</string>
    <string name="xsub">Submit</string>
    <string name="xpn">Phone Number</string>
    <string name="xefp">Enter Favorite place name</string>
    <string name="xssp">Select Shopping Preferences</string>
    <string name="xtoi">Touch the icons to see your ads.</string>
    <string name="xpcin">No Ads at this time. Please change your shopping preferences or check again later.</string>
    <string name="jpta">Please try again!</string>
    <string name="jpcnc">Please check your network connection</string>
    <string name="jemn">Please enter either Mobile No or Email Id.</string>
    <string name="jemi">Please enter Email Id.</string>
    <string name="jvemi">Please enter valid Email Id.</string>
    <string name="jpw">Please Wait...</string>
    <string name="jsq">Sending Request...</string>
    <string name="jsql">Loading...</string>
    <string name="jpevn">Your mobile number is valid.</string>
    <string name="xrefute">Refute</string>
    <string name="xodesrefute">Describe what is wrong with this incident</string>
    <string name="xoaadddesrefute">Add your comments here...</string>
    <string name="xrefBtn1">Objectionable or Inapproprite content.</string>
    <string name="xrefBtn2">No such incident at this location.</string>
    <string name="xrefBtn3">Incident cleared. Remove the alert.</string>
    <string name="xrefBtn4">Description is not correct.</string>
    <string name="xrefinc">Refute an Incident</string>
    <string name="xpsho">Personalized shopping</string>
    <string name="xpshofeed">How happy are you personalized shopping experience?</string>
    <string name="xincai">Information about Incidents</string>
    <string name="xincaifeed">How happy are you with the location based incidents on the app?</string>
    <string name="xpmsg">Personalized Messaging</string>
    <string name="xpmsgfeed">How happy are you with the App is messaging feature?</string>
    <string name="xnotnow">Not now</string>
</resources>