<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1E2E1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF0000"
        android:orientation="horizontal"
        android:weightSum="1">


        <ImageView
            android:id="@+id/back_arrow1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight=".2"
            android:src="@drawable/left_nev_arrow"
            android:tint="#FFFFFF" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight=".8"
            android:text="@string/xrefinc"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/xodesrefute"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <RadioButton
                        android:id="@+id/refBtn1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:checked="false"
                        android:text="@string/xrefBtn1" />

                    <RadioButton
                        android:id="@+id/refBtn2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:checked="false"
                        android:text="@string/xrefBtn2" />

                    <RadioButton
                        android:id="@+id/refBtn3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:checked="false"
                        android:text="@string/xrefBtn3" />

                    <RadioButton
                        android:id="@+id/refBtn4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/xrefBtn4" />

                </RadioGroup>

                <EditText
                    android:id="@+id/descEdtTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/custom_spinner_background"
                    android:gravity="top|left"
                    android:hint="@string/xoaadddesrefute"
                    android:inputType="textCapSentences|textMultiLine"
                    android:lines="8"
                    android:maxLines="10"
                    android:minLines="5"
                    android:paddingLeft="6dp"
                    android:scrollbars="vertical"
                    android:textColor="@color/textcolor"
                    android:textColorHint="@color/color_faintgray" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="15dp"
                android:weightSum="1">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/helpCan"
                    android:textAllCaps="false"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/xrefute"
                    android:textAllCaps="false"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

